[tool.poetry]
name = "amilib"
version = "0.3.10a6"
description = "semanticClimate libraries especially for document processing"
authors = ["petermr <peter.murray.rust@googlemail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^5.3.0"
nltk = "^3.9.1"
pillow = "^10.4.0"
pdfplumber = "^0.11.4"
requests = "^2.32.3"
numpy = "^1.24.1"
pandas = "^2.0.3"
pyvis = "^0.3.2"
selenium = "^4.25.0"
tinycss = "^0.4"
SPARQLWrapper = "^2.0.0"
webdriver-manager = "^4.0.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
