[metadata]
name = amilib
version = 1.0.0
description = Document and dictionary download, cleaning, management
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Murray-Rust
author_email = petermurrayrust@googlemail.com
url = https://github.com/petermr/amilib
license = Apache2
keywords = text and data mining
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.9, <=3.12
install_requires =
    lxml
    nltk
    pdfminer3
    Pillow
    setuptools
    pdfplumber
    requests
    numpy
    pandas
#    pyvis
    selenium
    tinycss
    SPARQLWrapper
    Tkinterweb
    webdriver-manager
    scikit-learn
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    amilib=amilib.amix:main
